tests/ecc-aws-109-prevent_0-65535_ingress_and_all/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "c7n-test2",
                "GroupName": "c7n-test2",
                "IpPermissions": [
                    {
                        "FromPort": 0,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "192.168.2.3/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 65535,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "123456789112",
                "GroupId": "sg-01c1e44a433d03d17",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-ad1234d0"
            },
            {
                "Description": "c7n-test",
                "GroupName": "c7n-test",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "192.168.2.1/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "123456789112",
                "GroupId": "sg-0ebf9083850c47100",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-ad1234d0"
            }
        ],
        "ResponseMetadata": {}
    }
}
